--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
 		"allowSyntheticDefaultImports": true,
 		"baseUrl": ".",
 		"paths": {
-			"template": [
+			"{{name}}": [
 				"./src"
 			],
 			"@/*": [
