--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
 		"ts-loader": "^9.3.1",
 		"tsconfig-paths-webpack-plugin": "^3.5.2",
 		"typescript": "^4.7.4",
-		"vue": "^3.2.36",
+		"vue": "3.4.23",
 		"vue-loader": "^17.0.0",
-		"vue-router": "^4.1.0",
+		"vue-router": "4.3.2",
 		"webpack": "^5.73.0",
 		"webpack-cli": "^4.10.0",
 		"webpack-dev-server": "^4.9.3",
