--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,9 @@
 			"@/*": [
 				"./example/*"
 			],
-		}
+		},
+		"resolveJsonModule": true,
+		"esModuleInterop": true
 	},
 	"files": [
 		"src/index.ts"
