--- a/package.json
+++ b/package.json
@@ -21,13 +21,17 @@
 	"devDependencies": {
 		"@babel/core": "^7.18.6",
 		"@babel/preset-env": "^7.18.6",
+		"@kotron/fortress-ui": "^0.1.2",
+		"@kotron/global": "0.0.4",
 		"@vue/compiler-sfc": "^3.2.37",
 		"babel-loader": "^8.2.5",
 		"clean-webpack-plugin": "^4.0.0",
 		"core-js": "^3.23.3",
 		"css-loader": "^6.7.1",
 		"html-webpack-plugin": "^5.5.0",
+		"md-editor-v3": "^4.13.3",
 		"node-sass": "^7.0.1",
+		"raw-loader": "^4.0.2",
 		"sass-loader": "^13.0.2",
 		"style-loader": "^3.3.1",
 		"ts-loader": "^9.3.1",
