优化项目架构

--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
 	"devDependencies": {
 		"@babel/core": "^7.18.6",
 		"@babel/preset-env": "^7.18.6",
-		"@kotron/fortress-ui": "^0.1.2",
-		"@kotron/global": "0.0.4",
+		"@gluttons/es-tools": "^0.0.6",
+		"@gluttons/fortress-ui": "^0.2.2",
 		"@vue/compiler-sfc": "^3.2.37",
 		"babel-loader": "^8.2.5",
 		"clean-webpack-plugin": "^4.0.0",
@@ -30,9 +30,9 @@
 		"css-loader": "^6.7.1",
 		"html-webpack-plugin": "^5.5.0",
 		"md-editor-v3": "^4.13.3",
-		"node-sass": "^7.0.1",
 		"raw-loader": "^4.0.2",
-		"sass-loader": "^13.0.2",
+		"sass": "^1.86.3",
+		"sass-loader": "^16.0.5",
 		"style-loader": "^3.3.1",
 		"ts-loader": "^9.3.1",
 		"tsconfig-paths-webpack-plugin": "^3.5.2",
