--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@babel/preset-env": "7.18.6",
 		"@gluttons/es-tools": "0.0.6",
 		"@gluttons/fortress-ui": "0.2.2",
+		"@types/node": "16.18.50",
 		"@vue/compiler-sfc": "3.4.23",
 		"babel-loader": "8.2.5",
 		"clean-webpack-plugin": "4.0.0",
