--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -16,8 +16,7 @@
 		"isolatedModules": false,
 		"noImplicitThis": true,
 		"resolveJsonModule": true,
-		"esModuleInterop": true,
-		"skipLibCheck": true
+		"esModuleInterop": true
 	},
 	"files": [
 		"./index.ts"
